basic version finished

--- a/Client/index.html
+++ b/Client/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meower - Twitter for Cats 😸 </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Meower - Twitter for Cats 😸 </h1>
+        <h1 class="title">Meower - Twitter for Cats 😸 </h1>
+        <main>
+            <form class=mew-form>
+                <label for="name">Name</label>
+                <input class="u-full-width" type="text" id="name" name="name">
+                <label for="content">Mew</label>
+                <textarea class="u-full-width" type="text" id="content" name="content"></textarea>
+                <button class="button-class-primary">Send your mew 🐈</button>
+                </form>
+                <div class="loading">
+                    <img src="loading.gif">
+                </div>
+                <div class="mews"></div>
+        </main>
     </header>
+    <script src="client.js"></script>
 </body>
 </html>
